[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/Levels/door/door_3_x2.png" type="Texture" id=1]
[ext_resource path="res://assets/art/Levels/door/door_4_x2.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Levels/door/door_1_x2.png" type="Texture" id=3]
[ext_resource path="res://assets/art/Levels/door/door_2_x2.png" type="Texture" id=4]
[ext_resource path="res://assets/art/Levels/door/door_5_x2.png" type="Texture" id=5]
[ext_resource path="res://Levels/Door.gd" type="Script" id=6]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ) ],
"loop": false,
"name": "open",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15, 28 )

[node name="Door" type="Node2D"]
script = ExtResource( 6 )
scene = "res://Levels/Platform/Plat lvl.tscn"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "open"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -1, 2 )
shape = SubResource( 2 )

[node name="TimerChangeScene" type="Timer" parent="."]
process_mode = 0
wait_time = 0.7
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="TimerChangeScene" to="." method="_on_TimerChangeScene_timeout"]
